--- a/content/pages/测试用公开页面.md
+++ b/content/pages/测试用公开页面.md
@@ -1,9 +1,11 @@
 ---
 date: 2022-12-23
 title: 测试用公开页面
+fileName: 测试用公开页面
 tags:
+- tag
 categories:
-lastMod: 2022-12-23
+lastMod: 2022-12-24
 ---
 这是一个测试用的公开业面
 
